--- a/pages/new1.html
+++ b/pages/new1.html
@@ -24,13 +24,23 @@
     </header>
     <!-- КОНЕЦ ХЕДЕРА -->
     <!-- НАЧАЛО ГЛАВНОЙ СЕКЦИИ -->
-    <main class="main">
-        <div class="news__onpage" id="special-offer">
-            <h2>Специальное предложение для новобрачных: бесплатный фотоальбом и диск</h2>
-            <p>Уважаемые молодожены, мы рады сообщить, что для вас у нас есть особенное предложение! Если вы выбираете наш фотоцентр для своей свадьбы, то мы дарим вам бесплатный фотоальбом и диск с фотографиями, чтобы сохранить воспоминания об этом особенном дне на всю жизнь.</p>
-            <p>В нашем фотоцентре работают профессиональные фотографы, которые с радостью запечатлят самые важные и трогательные моменты вашей свадьбы. А наши дизайнеры сделают из этих фотографий настоящий шедевр, который вы будете радоваться смотреть на протяжении всей жизни.</p>
-            <p>Спешите воспользоваться этим предложением и свяжитесь с нами, чтобы узнать подробности и забронировать дату вашей свадьбы. Мы гарантируем вам самое высокое качество работы и приятное обслуживание!</p>
+    <main class="main" >
+
+        <div class="news__onpage__main" id="special-offer">
+            <div class="news__onpage" >
+                <h2>Специальное предложение для новобрачных: бесплатный фотоальбом и диск</h2>
+                <p>Уважаемые молодожены, мы рады сообщить, что для вас у нас есть особенное предложение! Если вы выбираете наш фотоцентр для своей свадьбы, то мы дарим вам бесплатный фотоальбом и диск с фотографиями, чтобы сохранить воспоминания об этом особенном дне на всю жизнь.</p>
+                <p>В нашем фотоцентре работают профессиональные фотографы, которые с радостью запечатлят самые важные и трогательные моменты вашей свадьбы. А наши дизайнеры сделают из этих фотографий настоящий шедевр, который вы будете радоваться смотреть на протяжении всей жизни.</p>
+                <p>Спешите воспользоваться этим предложением и свяжитесь с нами, чтобы узнать подробности и забронировать дату вашей свадьбы. Мы гарантируем вам самое высокое качество работы и приятное обслуживание!</p>
+                <p>Акция действует до конца этого месяца. Не упустите возможность получить бесплатный фотоальбом и диск с фотографиями вашей свадьбы!</p>
+            </div>
+            <div class="news__onpage__image">
+                <img src="../IMG/onpage_new1.jpg" alt="">
+            </div>
         </div>
+        
+
+        
     </main>
     <!-- КОНЕЦ ГЛАВНОЙ СЕКЦИИ -->
     <!-- ФУТЕР -->
