--- a/pages/new2.html
+++ b/pages/new2.html
@@ -25,14 +25,21 @@
     <!-- КОНЕЦ ХЕДЕРА -->
     <!-- НАЧАЛО ГЛАВНОЙ СЕКЦИИ -->
     <main class="main">
-        <div class="news" id="photo-sessions">
-            <h2>Фотосессии на любой вкус!</h2>
-            <p>Наш фотоцентр предлагает широкий выбор фотосессий для всех возрастов и интересов! Независимо от того, вы являетесь семьей, моделью или владельцем животного, мы можем предложить вам идеальную фотосессию, чтобы запечатлеть вашу индивидуальность и красоту.</p>
-            <p>Мы работаем только с профессиональными фотографами, которые помогут вам чувствовать себя комфортно и раскроют вашу настоящую красоту. У нас есть все необходимое оборудование и инструменты, чтобы сделать вашу фотосессию незабываемой.</p>
-            <p>Мы предлагаем широкий спектр фотосессий, включая семейные фотосессии, фотосессии пар, фотосессии для детей, фотосессии животных, а также фотосессии моделей. Мы уверены, что вы найдете у нас именно то, что вам нужно, чтобы запечатлеть важные моменты вашей жизни или создать портфолио для своей карьеры в модельном бизнесе.</p>
-            <p>Кроме того, мы всегда стараемся сделать вашу фотосессию особенной и запоминающейся, чтобы вы могли наслаждаться воспоминаниями о ней в течение многих лет. Мы предлагаем не только профессиональную фотосессию, но и индивидуальный подход к каждому клиенту. Мы готовы выслушать ваши пожелания и предложить свои советы и идеи, чтобы вместе создать фотографии, которые будут отражать вашу личность и стиль.</p>
-            <p>Свяжитесь с нами и выберите фотосессию на свой вкус! Мы гарантируем, что вы останетесь довольны качеством нашей работы и нашим приятным обслуживанием.</p>
+
+        <div class="news__onpage__main" id="photo-sessions">
+            <div class="news__onpage" >
+                <h2>Фотосессии на любой вкус!</h2>
+                <p>Наш фотоцентр предлагает широкий выбор фотосессий для всех возрастов и интересов! Независимо от того, вы являетесь семьей, моделью или владельцем животного, мы можем предложить вам идеальную фотосессию, чтобы запечатлеть вашу индивидуальность и красоту.</p>
+                <p>Мы работаем только с профессиональными фотографами, которые помогут вам чувствовать себя комфортно и раскроют вашу настоящую красоту. У нас есть все необходимое оборудование и инструменты, чтобы сделать вашу фотосессию незабываемой.</p>
+                <p>Мы предлагаем широкий спектр фотосессий, включая семейные фотосессии, фотосессии пар, фотосессии для детей, фотосессии животных, а также фотосессии моделей. Мы уверены, что вы найдете у нас именно то, что вам нужно, чтобы запечатлеть важные моменты вашей жизни или создать портфолио для своей карьеры в модельном бизнесе.</p>
+                <p>Кроме того, мы всегда стараемся сделать вашу фотосессию особенной и запоминающейся, чтобы вы могли наслаждаться воспоминаниями о ней в течение многих лет. Мы предлагаем не только профессиональную фотосессию, но и индивидуальный подход к каждому клиенту. Мы готовы выслушать ваши пожелания и предложить свои советы и идеи, чтобы вместе создать фотографии, которые будут отражать вашу личность и стиль.</p>
+                <p>Свяжитесь с нами и выберите фотосессию на свой вкус! Мы гарантируем, что вы останетесь довольны качеством нашей работы и нашим приятным обслуживанием.</p>
+            </div>
+            <div class="news__onpage__image">
+                <img src="../IMG/onpage_new2.jpg" alt="">
+            </div>
         </div>
+        
     </main>
     <!-- КОНЕЦ ГЛАВНОЙ СЕКЦИИ -->
     <!-- ФУТЕР -->
