--- a/pages/new3.html
+++ b/pages/new3.html
@@ -25,14 +25,20 @@
     <!-- КОНЕЦ ХЕДЕРА -->
     <!-- НАЧАЛО ГЛАВНОЙ СЕКЦИИ -->
     <main class="main">
-        <div class="news" id="photo-editing">
-            <h2>Обработка фотографий высокого качества!</h2>
-            <p>Наш фотоцентр предлагает профессиональную обработку ваших фотографий. Мы используем только лучшее оборудование и программное обеспечение для обработки каждой фотографии, чтобы добиться максимально качественного результата.</p>
-            <p>Наш персонал имеет многолетний опыт работы в обработке фотографий, и всегда готов помочь вам воплотить ваши идеи в реальность. Мы гарантируем высокое качество обработки фотографий и быстрое выполнение заказа, чтобы вы могли наслаждаться результатом как можно скорее.</p>
-            <p>Мы предлагаем широкий спектр услуг по обработке фотографий, включая ретушь портретов, цветокоррекцию, обрезку и редактирование фона, увеличение резкости и многое другое. Независимо от того, нужно ли вам обработать несколько снимков или большой объем работ, наша команда готова выполнить заказ любой сложности.</p>
-            <p>Мы также предлагаем индивидуальный подход к каждому клиенту, чтобы обеспечить наилучший результат. Вы можете выразить свои пожелания и идеи, и мы с удовольствием поможем воплотить их в жизнь. Мы уверены, что вы останетесь довольны качеством нашей работы и нашим профессиональным подходом.</p>
-            <p>Свяжитесь с нами, чтобы получить профессиональную обработку ваших фотографий. Мы гарантируем, что вы будете в восторге от результата и вернетесь к нам снова и снова.</p>
+        <div class="news__onpage__main" id="photo-editing">
+            <div class="news__onpage" >
+                <h2>Обработка фотографий высокого качества!</h2>
+                <p>Наш фотоцентр предлагает профессиональную обработку ваших фотографий. Мы используем только лучшее оборудование и программное обеспечение для обработки каждой фотографии, чтобы добиться максимально качественного результата.</p>
+                <p>Наш персонал имеет многолетний опыт работы в обработке фотографий, и всегда готов помочь вам воплотить ваши идеи в реальность. Мы гарантируем высокое качество обработки фотографий и быстрое выполнение заказа, чтобы вы могли наслаждаться результатом как можно скорее.</p>
+                <p>Мы предлагаем широкий спектр услуг по обработке фотографий, включая ретушь портретов, цветокоррекцию, обрезку и редактирование фона, увеличение резкости и многое другое. Независимо от того, нужно ли вам обработать несколько снимков или большой объем работ, наша команда готова выполнить заказ любой сложности.</p>
+                <p>Мы также предлагаем индивидуальный подход к каждому клиенту, чтобы обеспечить наилучший результат. Вы можете выразить свои пожелания и идеи, и мы с удовольствием поможем воплотить их в жизнь. Мы уверены, что вы останетесь довольны качеством нашей работы и нашим профессиональным подходом.</p>
+                <p>Свяжитесь с нами, чтобы получить профессиональную обработку ваших фотографий. Мы гарантируем, что вы будете в восторге от результата и вернетесь к нам снова и снова.</p>
+            </div>
+            <div class="news__onpage__image">
+                <img src="../IMG/onpage_new3.jpg" alt="">
+            </div>
         </div>
+        
     </main>
     <!-- КОНЕЦ ГЛАВНОЙ СЕКЦИИ -->
     <!-- ФУТЕР -->
