--- a/pages/new4.html
+++ b/pages/new4.html
@@ -25,13 +25,19 @@
     <!-- КОНЕЦ ХЕДЕРА -->
     <!-- НАЧАЛО ГЛАВНОЙ СЕКЦИИ -->
     <main class="main">
-        <div class="news" id="new-equipment">
-            <h2>У нас новое оборудование для фотосъемки!</h2>
-            <p>Наш фотоцентр всегда стремится обеспечить вам самое лучшее качество фотографий, поэтому мы постоянно обновляем наше оборудование для фотосъемки. И мы рады сообщить вам, что недавно мы приобрели новую камеру и оборудование для съемки видео, которые помогут нам создавать еще более запоминающиеся впечатления.</p>
-            <p>Новое оборудование, которое мы приобрели, обладает самыми современными функциями и технологиями. Это позволит нам снимать фотографии и видео в высоком разрешении, с отличной цветопередачей и четкостью. Мы уверены, что наши клиенты будут довольны качеством наших услуг и фотографий, которые мы сможем создавать благодаря новому оборудованию.</p>
-            <p>Наш персонал, который имеет большой опыт работы в области фотосъемки, уже знаком с новым оборудованием и готов использовать его для создания лучших фотографий и видео для вас. Мы гарантируем, что вы останетесь довольны результатом нашей работы.</p>
-            <p>Свяжитесь с нами, чтобы узнать больше о новом оборудовании и забронировать фотосессию с использованием новых технологий. Мы готовы помочь вам запечатлеть важные моменты вашей жизни с использованием самого лучшего оборудования для фотосъемки.</p>
+        <div class="news__onpage__main" id="new-equipment">
+            <div class="news__onpage" >
+                <h2>У нас новое оборудование для фотосъемки!</h2>
+                <p>Наш фотоцентр всегда стремится обеспечить вам самое лучшее качество фотографий, поэтому мы постоянно обновляем наше оборудование для фотосъемки. И мы рады сообщить вам, что недавно мы приобрели новую камеру и оборудование для съемки видео, которые помогут нам создавать еще более запоминающиеся впечатления.</p>
+                <p>Новое оборудование, которое мы приобрели, обладает самыми современными функциями и технологиями. Это позволит нам снимать фотографии и видео в высоком разрешении, с отличной цветопередачей и четкостью. Мы уверены, что наши клиенты будут довольны качеством наших услуг и фотографий, которые мы сможем создавать благодаря новому оборудованию.</p>
+                <p>Наш персонал, который имеет большой опыт работы в области фотосъемки, уже знаком с новым оборудованием и готов использовать его для создания лучших фотографий и видео для вас. Мы гарантируем, что вы останетесь довольны результатом нашей работы.</p>
+                <p>Свяжитесь с нами, чтобы узнать больше о новом оборудовании и забронировать фотосессию с использованием новых технологий. Мы готовы помочь вам запечатлеть важные моменты вашей жизни с использованием самого лучшего оборудования для фотосъемки.</p>
+            </div>
+            <div class="news__onpage__image">
+                <img src="../IMG/onpage_new4.jpg" alt="">
+            </div>
         </div>
+        
     </main>
     <!-- КОНЕЦ ГЛАВНОЙ СЕКЦИИ -->
     <!-- ФУТЕР -->
